<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/article_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thumbnail_height"
                android:scaleType="centerCrop"
                android:background="@color/colorGray"/>
            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:textSize="@dimen/headline_text"
                android:textStyle="bold"
                android:padding="@dimen/medium_spacing"/>

            <TextView
                android:id="@+id/article_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/dummy_author"
                android:paddingLeft="@dimen/medium_spacing"
                android:paddingBottom="@dimen/small_spacing"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/medium_spacing"
                android:paddingRight="@dimen/medium_spacing"
                android:paddingBottom="@dimen/small_spacing">
                <TextView
                    android:id="@+id/article_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_section"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/article_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>